--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                         Have a large legacy codebase? Upload your zip file (up to 2GB) securely to our Dropbox request folder.
                     </p>
                     
-                    <a href="https://www.dropbox.com/request/ВАШ_КОД_ЗДЕСЬ" target="_blank" class="dropbox-btn">
+                    <a href="https://www.dropbox.com/request/NWTSA5Z71DFERkjjQDUh" target="_blank" class="dropbox-btn">
                         Upload to Dropbox &nearr;
                     </a>
                 </div>
@@ -341,24 +341,24 @@
                     <span class="step-label">Step 2: Contact Details</span>
                     
                     <form 
-                        action="https://docs.google.com/forms/u/0/d/e/ВАШ_ДЛИННЫЙ_ID_ФОРМЫ/formResponse" 
+                        action="https://docs.google.com/forms/d/e/1FAIpQLSe...xYz/" 
                         method="POST" 
                         target="hidden_iframe"
                         onsubmit="submitted=true;"
                     >
                         <div class="form-group">
                             <label>Name</label>
-                            <input type="text" name="entry.123456789" required placeholder="John Doe">
+                            <input type="text" name="entry.850715313" required placeholder="John Doe">
                         </div>
 
                         <div class="form-group">
                             <label>Email Address</label>
-                            <input type="email" name="entry.987654321" required placeholder="john@company.com">
+                            <input type="email" name="entry.850715313" required placeholder="john@company.com">
                         </div>
 
                         <div class="form-group">
                             <label>Project Details / File Name</label>
-                            <textarea name="entry.112233445" placeholder="Tell us about your legacy system, or paste the filename you uploaded to Dropbox..."></textarea>
+                            <textarea name="entry.850715313" placeholder="Tell us about your legacy system, or paste the filename you uploaded to Dropbox..."></textarea>
                         </div>
 
                         <button type="submit" class="btn btn-primary" style="width: 100%;">Submit Inquiry</button>
