Update form action URL in index.html

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     <span class="step-label">Step 2: Contact Details</span>
                     
                     <form 
-                        action="https://docs.google.com/forms/d/e/1FAIpQLSe...xYz/" 
+                        action="https://docs.google.com/forms/d/e/1FAIpQLSeW9HKokz3GM5rjzprgmWGAcGvZ2Vfug9Jpbn4V8_AgXpDYqQ/formResponse"
                         method="POST" 
                         target="hidden_iframe"
                         onsubmit="submitted=true;"
