Update contact link to external URL

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FirstDig - Digital Excavation</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -355,7 +356,7 @@
             </div>
 
             <div class="header-actions">
-                <a href="#contact" class="btn-contact">Contact us</a>
+                <a href="//firstlinesoftware.com/contact-us/" class="btn-contact">Contact us</a>
             </div>
         </div>
     </header>
